# restate-sql

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.ipynb  example.sql
src/restate_sql/: __init__.py  cli.py  connection.py  cursor.py  exceptions.py
